# backend/src/api/auth/dto/responses/profile-response.dto.ts
@@ -8,6 +8,9 @@ export class ProfileResponseDto {
   @ApiProperty()
   email!: string;
 
+  @ApiProperty()
+  username!: string;
+
   @ApiProperty({ enum: Role })
   role!: Role;
 }
