# backend/src/api/auth/strategies/jwt.strategy.ts
@@ -7,6 +7,7 @@ import type { Request } from 'express';
 export interface JwtPayload {
   id: string;
   email: string;
+  username: string;
   role: Role;
 }
 
